src/styles.css
@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
html, body {
  height: 100%;
}

body {
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
  background-color: #ecf0f1 !important;
}

.pointer {
  cursor: pointer;
}

.mat-button-base {
  margin: 5px !important;
}

h2 {
    color: #3498DB !important;
}

.mat-card {
  margin-bottom: 15px;
  margin-top: 15px;
  width: 100%;
  color: #212529
}

mat-form-field {
  width: 100%;
}

.hide {
  display: none;
}

.bold {
  font-weight: bold !important;
}

/*# sourceMappingURL=styles.css.map */

